--- a/_1.html
+++ b/_1.html
@@ -53,9 +53,10 @@
 							<img src="img/icons/play.png" alt="icon">
 						</div>
 						<div class="dinamic_active_item_progress">
-							<div class="line">
-								<div class="line_fill bg_indigo" style="width: 100%;">
-									<span class="procent">100%</span>
+							<div class="line_wrp">
+								<span class="procent" style="left: 100%;">100%</span>
+								<div class="line">
+									<div class="line_fill bg_indigo" style="width: 100%;"></div>
 								</div>
 							</div>
 							<p class="dinamic_active_item_status">Активность завершена</p>
