--- a/_5.html
+++ b/_5.html
@@ -52,9 +52,10 @@
 							<img src="img/icons/case.png" alt="icon">
 						</div>
 						<div class="dinamic_active_item_progress">
-							<div class="line">
-								<div class="line_fill bg_pink_2" style="width: 70%;">
-									<span class="procent">70%</span>
+							<div class="line_wrp">
+								<span class="procent" style="left: 70%;">70%</span>
+								<div class="line">
+									<div class="line_fill bg_pink_2" style="width: 70%;"></div>
 								</div>
 							</div>
 							<p class="dinamic_active_item_status">В процессе</p>
