--- a/all-books.html
+++ b/all-books.html
@@ -36,7 +36,7 @@
 								<button>Добавить книги</button>
 							</div>
 							<div class="all_books__filter">
-								<select name="status" data-fixed-placeholder="Статус:" data-placeholder="Все">
+								<select name="status" data-format="d-m-Y" data-fixed-placeholder="Статус:" data-placeholder="Все">
 									<option value="1">Назначено</option>
 									<option value="2">В процессе</option>
 									<option value="3">Завершено</option>
@@ -66,13 +66,13 @@
 									<div class="all_books__item_filter">
 										<p>Начало активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 										</div>
 									</div>
 									<div class="all_books__item_filter">
 										<p>Конец активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 										</div>
 									</div>
 								</div>
@@ -104,13 +104,13 @@
 									<div class="all_books__item_filter">
 										<p>Начало активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 										</div>
 									</div>
 									<div class="all_books__item_filter">
 										<p>Конец активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 										</div>
 									</div>
 								</div>
@@ -138,13 +138,13 @@
 									<div class="all_books__item_filter">
 										<p>Начало активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 										</div>
 									</div>
 									<div class="all_books__item_filter">
 										<p>Конец активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 										</div>
 									</div>
 								</div>
@@ -176,13 +176,13 @@
 									<div class="all_books__item_filter">
 										<p>Начало активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 										</div>
 									</div>
 									<div class="all_books__item_filter">
 										<p>Конец активности</p>
 										<div class="datapicker_wrp">
-											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+											<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 										</div>
 									</div>
 								</div>
@@ -235,13 +235,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -273,13 +273,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -307,13 +307,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -345,13 +345,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -385,13 +385,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -423,13 +423,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -457,13 +457,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
@@ -495,13 +495,13 @@
 										<div class="all_books__item_filter">
 											<p>Начало активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="19.08.2018" data-large-mode="true">
 											</div>
 										</div>
 										<div class="all_books__item_filter">
 											<p>Конец активности</p>
 											<div class="datapicker_wrp">
-												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="30.08.2018" data-large-mode="true">
+												<input type="text" class="all_books__item_filter_date" data-theme="my-style" data-lang="ru" data-large-default="true" data-default-date="28.08.2018" data-large-mode="true">
 											</div>
 										</div>
 									</div>
