--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<div class="icon_wrp line_blue">
 											<img src="img/icons/open-book.png" alt="icon">
 										</div>
-										<span>Книги</span>
+										<a href="_3.html">Книги</a>
 									</div>
 									<div class="main_dinamic_active__level">
 										<div class="line_bg">
@@ -88,7 +88,7 @@
 										<div class="icon_wrp line_yellow">
 											<img src="img/icons/class-group.png" alt="icon">
 										</div>
-										<span>Внешние <br>мероприятия</span>
+										<a href="_2.html">Внешние <br>мероприятия</a>
 									</div>
 									<div class="main_dinamic_active__level">
 										<div class="line_bg">
@@ -106,7 +106,7 @@
 										<div class="icon_wrp line_blue_2">
 											<img src="img/icons/play.png" alt="icon">
 										</div>
-										<span>Видео</span>
+										<a href="_1.html">Видео</a>
 									</div>
 									<div class="main_dinamic_active__level">
 										<div class="line_bg">
@@ -124,7 +124,7 @@
 										<div class="icon_wrp line_pink">
 											<img src="img/icons/case.png" alt="icon">
 										</div>
-										<span>Совместные <br>проекты</span>
+										<a href="_5.html">Совместные <br>проекты</a>
 									</div>
 									<div class="main_dinamic_active__level">
 										<div class="line_bg">
@@ -142,7 +142,7 @@
 										<div class="icon_wrp line_pink_2">
 											<img src="img/icons/audience.png" alt="icon">
 										</div>
-										<span>Тренинги</span>
+										<a href="_6.html">Тренинги</a>
 									</div>
 									<div class="main_dinamic_active__level">
 										<div class="line_bg">
@@ -160,7 +160,7 @@
 										<div class="icon_wrp line_purple">
 											<img src="img/icons/teacher-reading.png" alt="icon">
 										</div>
-										<span>Коучинг</span>
+										<a href="_4.html">Коучинг</a>
 									</div>
 									<div class="main_dinamic_active__level">
 										<div class="line_bg">
