--- a/_3.html
+++ b/_3.html
@@ -53,9 +53,10 @@
 							<img src="img/icons/open-book.png" alt="icon">
 						</div>
 						<div class="dinamic_active_item_progress">
-							<div class="line">
-								<div class="line_fill bg_blue" style="width: 10%;">
-									<span class="procent">10%</span>
+							<div class="line_wrp">
+								<span class="procent" style="left: 10%;">10%</span>
+								<div class="line">
+									<div class="line_fill bg_blue" style="width: 10%;"></div>
 								</div>
 							</div>
 							<p class="dinamic_active_item_status">В процессе</p>
