--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="viewport" content="width=1014">
 	<title>Document</title>
-	<link rel="stylesheet" href="libs/Datedropper3-master/datedropper.min.css">
+	<link rel="stylesheet" href="libs/datedropper/datedropper.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -1381,7 +1380,7 @@
 	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="libs/nativejs-select/nativejs-select.min.js"></script>
-	<script src="libs/Datedropper3-master/datedropper.min.js"></script>
+	<script src="libs/datedropper/datedropper.js"></script>
 	<script src="js/common.js"></script>
 </body>
 </html>
