--- a/4.html
+++ b/4.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
-	<title>SPECPOSTAVKA </title>
+	<link rel="shortcut icon" href="img/favicon_.ico" type="image/png">
+	<title>Document</title>
 	<link rel="stylesheet" href="libs/Font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick-theme.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="other_page">
 	<header class="header">
 		<div class="header__top">
 			<div class="CENTERER">
@@ -34,12 +34,12 @@
 		<div class="header__middle">
 			<div class="CENTERER header__middle_flex">
 				<div class="header__logo">
-					<a href="#"><img src="img/logo.png" alt="logo"></a>
+					<a href="index.html"><img src="img/logo.png" alt="logo"></a>
 				</div>
 				<div class="header__menu">
 					<ul>
-						<li class="current-menu-item"><a href="#">Главная</a></li>
-						<li>
+						<li><a href="index.html">Главная</a></li>
+						<li class="current-menu-item">
 							<a href="#" class="js-prevent_default">Услуги</a>
 							<ul class="sub-menu">
 								<li><a href="1.html">Автоматизация процесса обучения</a></li>
@@ -61,28 +61,6 @@
 				<button class="to_mobile_menu" id="js-to_mobile_menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
 			</div>
 		</div>
-		<div class="header__bottom">
-			<div class="header_slider" id="header-slider">
-				<div>
-					<div class="header_slider__item" style="background-image: url(img/1.jpg);">
-						<div class="CENTERER">
-							<h1>АВТОМАТИЗАЦИЯ ПРОЦЕССА ОБУЧЕНИЯ</h1>
-							<p>Всесторонний аудит СДО, автоматизация и интеграция с другими системами компании.</p>
-						</div>
-					</div>
-				</div>
-				<div>
-					<div class="header_slider__item" style="background-image: url(img/2.jpg);">
-						<div class="CENTERER">
-							<h1>РАЗРАБОТКА ЭЛЕКТРОННЫХ КУРСОВ</h1>
-							<p>Разработка дистанционных курсов любого уровня сложности. Создание интерактивной учебной среды.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<button class="header_prev js-header_prev"><img src="img/icons/prev.png" alt="icon"></button>
-			<button class="header_next js-header_next"><img src="img/icons/next.png" alt="icon"></button>
-		</div>
 	</header>
 	<!-- mobile menu -->
 	<div class="mobile_menu">
@@ -94,7 +72,7 @@
 			</div>
 			<div class="mobile_menu__nuv">
 				<ul>
-					<li><a href="#">главная</a></li>
+					<li><a href="index.html">главная</a></li>
 					<li class="menu-item-has-children">
 						<a href="#" class="js-prevent_default">услуги</a>
 						<ul class="sub-menu">
@@ -106,7 +84,7 @@
 					</li>
 					<li><a href="portfolio.html">portfolio</a></li>
 					<li class="menu-item-has-children">
-						<a href="#">о нас</a>
+						<a href="#" class="js-prevent_default">о нас</a>
 						<ul class="sub-menu">
 							<li><a href="about.html">о компании</a></li>
 							<li><a href="contacts.html">контакты</a></li>
@@ -117,61 +95,27 @@
 		</div>
 	</div>
 	<!-- end mobile menu -->
-	
+
 	<main>
-		<section class="about">
+		<section class="page">
 			<div class="CENTERER">
 				<div class="title">
-					<h2>О нас</h2>
+					<h2>РАЗРАБОТКА ЭЛЕКТРОННЫХ КУРСОВ</h2>
 				</div>
-				<div id="map"></div>
-				<p>Мы - команда профессионалов в IT и HR областях, и наша цель - предоставление качественных услуг в сфере автоматизации работы с персоналом – подбора, учета, обучения, развития и оценки персонала, а так же сопутствующей отчетности.</p>
-				<p>Наша компания ежедневно и эффективно решает нетривиальные задачи в сфере автоматизации работы с персоналом в организациях самого различного масштаба и географического положения – от ритейла с небольшой численностью персонала до территориально-промышленных комплексов с численностью персонала в десятки тысяч человек.</p>
-			</div>
-		</section>
-		<section class="last_projects">
-			<div class="CENTERER">
-				<div class="title">
-					<h2>Наши услуги</h2>
-				</div>
-				<div class="last_projects__items">
-					<!-- item -->
-					<div class="last_projects__item">
-						<div class="last_projects__previes">
-							<img src="img/last-projects/howworks.jpg" alt="img">
-						</div>
-						<div class="last_projects__body">
-							<h3>Автоматизация</h3>
-							<p>Статьи по автоматизации различных систем.</p>
-							<a href="#" class="last_projects__body__more">Подробнее</a>
-						</div>
-					</div>
-					<!-- end item -->
-					<!-- item -->
-					<div class="last_projects__item">
-						<div class="last_projects__previes">
-							<img src="img/last-projects/mission.jpg" alt="img">
-						</div>
-						<div class="last_projects__body">
-							<h3>Портфолио </h3>
-							<p>Уже реализованные нами проекты.</p>
-							<a href="#" class="last_projects__body__more">Подробнее</a>
-						</div>
-					</div>
-					<!-- end item -->
-					<!-- item -->
-					<div class="last_projects__item">
-						<div class="last_projects__previes">
-							<img src="img/last-projects/who-we-are.jpg" alt="img">
-						</div>
-						<div class="last_projects__body">
-							<h3>О компании</h3>
-							<p>Информация о нашей компании</p>
-							<a href="#" class="last_projects__body__more">Подробнее</a>
-						</div>
-					</div>
-					<!-- end item -->
-				</div>
+				<img src="img/services/10.jpg" alt="img">
+				<p>Компания "Спецпоставка" занимается не только автоматизацией и интеграцией СДО, систем подбора персонала и оценки, но и созданием электронных курсов различной степени сложности. На сегодняшний день электронные курсы - один из самых востребованных инструментов обучения сотрудников, ведь дистанционное обучение предполагает меньше затрат и рисков, нежели очное. </p>
+				<p>Так же электронные курсы могут быть транслированы большому количеству сотрудников в короткие сроки. Электронный курс не должен быть простым набором слайдов, каждый курс должен эффективно решать определенную обучающую задачу и соответствовать принципам педагогического дизайна. Именно такие курсы и разрабатывает наша команда. Разработка дистанционного курса, как правило, проходит в несколько этапов: </p>
+				<h5></h5>
+				<p>
+					<strong>1. Разработка сценария</strong><br>
+					За дело берется наш сценарист: он продумывает максимально подходящую под определенную задачу концепцию курса и составляет сценарий с раскадровкой в ПО Power Point, исходя из имеющейся информации о целевой аудитории курса, его задач и ваших требований. Также на данном этапе выстраивается система проверки знаний, тесты и упражнения, которые будут измерять результат. 
+					<br><strong>2. Создание дизайна</strong><br>
+					После утверждения сценария, курс переходит в руки нашего дизайнера и сценарий обретает свою оболочку: создается графическое оформление, элементы интерфейса, размещаются картинки и видеовставки. 
+					<br><strong>3. Верстка</strong><br>
+					Это этап, на котором сценарий и дизайн преображаются в полноценный электронный курс со всеми необходимыми элементами.
+					<br><strong>4. Проверка</strong><br>
+					Настраиваем интеграцию курса в Вашу СДО, проверяем, полноценно ли передается результат, работают ли формы обратной связи и верно ли отображаются результаты тестирований. 
+				</p>
 			</div>
 		</section>
 	</main>
