--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
-	<title>SPECPOSTAVKA </title>
+	<link rel="shortcut icon" href="img/favicon_.ico" type="image/png">
+	<title>Document</title>
 	<link rel="stylesheet" href="libs/Font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick-theme.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="other_page">
 	<header class="header">
 		<div class="header__top">
 			<div class="CENTERER">
@@ -34,11 +34,11 @@
 		<div class="header__middle">
 			<div class="CENTERER header__middle_flex">
 				<div class="header__logo">
-					<a href="#"><img src="img/logo.png" alt="logo"></a>
+					<a href="index.html"><img src="img/logo.png" alt="logo"></a>
 				</div>
 				<div class="header__menu">
 					<ul>
-						<li class="current-menu-item"><a href="#">Главная</a></li>
+						<li><a href="index.html">Главная</a></li>
 						<li>
 							<a href="#" class="js-prevent_default">Услуги</a>
 							<ul class="sub-menu">
@@ -48,7 +48,7 @@
 								<li><a href="4.html">Разработка электронных курсов</a></li>
 							</ul>
 						</li>
-						<li><a href="portfolio.html">Портфолио</a></li>
+						<li class="current-menu-item"><a href="portfolio.html">Портфолио</a></li>
 						<li>
 							<a href="#" class="js-prevent_default">О нас</a>
 							<ul class="sub-menu">
@@ -61,28 +61,6 @@
 				<button class="to_mobile_menu" id="js-to_mobile_menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
 			</div>
 		</div>
-		<div class="header__bottom">
-			<div class="header_slider" id="header-slider">
-				<div>
-					<div class="header_slider__item" style="background-image: url(img/1.jpg);">
-						<div class="CENTERER">
-							<h1>АВТОМАТИЗАЦИЯ ПРОЦЕССА ОБУЧЕНИЯ</h1>
-							<p>Всесторонний аудит СДО, автоматизация и интеграция с другими системами компании.</p>
-						</div>
-					</div>
-				</div>
-				<div>
-					<div class="header_slider__item" style="background-image: url(img/2.jpg);">
-						<div class="CENTERER">
-							<h1>РАЗРАБОТКА ЭЛЕКТРОННЫХ КУРСОВ</h1>
-							<p>Разработка дистанционных курсов любого уровня сложности. Создание интерактивной учебной среды.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<button class="header_prev js-header_prev"><img src="img/icons/prev.png" alt="icon"></button>
-			<button class="header_next js-header_next"><img src="img/icons/next.png" alt="icon"></button>
-		</div>
 	</header>
 	<!-- mobile menu -->
 	<div class="mobile_menu">
@@ -94,7 +72,7 @@
 			</div>
 			<div class="mobile_menu__nuv">
 				<ul>
-					<li><a href="#">главная</a></li>
+					<li><a href="index.html">главная</a></li>
 					<li class="menu-item-has-children">
 						<a href="#" class="js-prevent_default">услуги</a>
 						<ul class="sub-menu">
@@ -106,7 +84,7 @@
 					</li>
 					<li><a href="portfolio.html">portfolio</a></li>
 					<li class="menu-item-has-children">
-						<a href="#">о нас</a>
+						<a href="#" class="js-prevent_default">о нас</a>
 						<ul class="sub-menu">
 							<li><a href="about.html">о компании</a></li>
 							<li><a href="contacts.html">контакты</a></li>
@@ -117,61 +95,19 @@
 		</div>
 	</div>
 	<!-- end mobile menu -->
-	
+
 	<main>
-		<section class="about">
+		<section class="page">
 			<div class="CENTERER">
 				<div class="title">
-					<h2>О нас</h2>
+					<h2>Портфолио</h2>
 				</div>
-				<div id="map"></div>
-				<p>Мы - команда профессионалов в IT и HR областях, и наша цель - предоставление качественных услуг в сфере автоматизации работы с персоналом – подбора, учета, обучения, развития и оценки персонала, а так же сопутствующей отчетности.</p>
-				<p>Наша компания ежедневно и эффективно решает нетривиальные задачи в сфере автоматизации работы с персоналом в организациях самого различного масштаба и географического положения – от ритейла с небольшой численностью персонала до территориально-промышленных комплексов с численностью персонала в десятки тысяч человек.</p>
-			</div>
-		</section>
-		<section class="last_projects">
-			<div class="CENTERER">
-				<div class="title">
-					<h2>Наши услуги</h2>
-				</div>
-				<div class="last_projects__items">
-					<!-- item -->
-					<div class="last_projects__item">
-						<div class="last_projects__previes">
-							<img src="img/last-projects/howworks.jpg" alt="img">
-						</div>
-						<div class="last_projects__body">
-							<h3>Автоматизация</h3>
-							<p>Статьи по автоматизации различных систем.</p>
-							<a href="#" class="last_projects__body__more">Подробнее</a>
-						</div>
-					</div>
-					<!-- end item -->
-					<!-- item -->
-					<div class="last_projects__item">
-						<div class="last_projects__previes">
-							<img src="img/last-projects/mission.jpg" alt="img">
-						</div>
-						<div class="last_projects__body">
-							<h3>Портфолио </h3>
-							<p>Уже реализованные нами проекты.</p>
-							<a href="#" class="last_projects__body__more">Подробнее</a>
-						</div>
-					</div>
-					<!-- end item -->
-					<!-- item -->
-					<div class="last_projects__item">
-						<div class="last_projects__previes">
-							<img src="img/last-projects/who-we-are.jpg" alt="img">
-						</div>
-						<div class="last_projects__body">
-							<h3>О компании</h3>
-							<p>Информация о нашей компании</p>
-							<a href="#" class="last_projects__body__more">Подробнее</a>
-						</div>
-					</div>
-					<!-- end item -->
-				</div>
+				<p>Наша команда за короткий срок реализовала множество проектов по автоматизации и интеграции процессов обучения в различных компаниях, от небольших и до самых крупных, таких как Hoff, Банк Москвы и Yandex. Львиная доля работ по автоматизации была проведена для системы Webtutor в различных компаниях.</p>
+				<p>Для некоторых клиентов, благодаря нам, СДО была установлена с нуля и полностью настроена по ТЗ заказчика, были автоматизированы такие механизмы как: выгрузка из кадровой БД, назначение курсов и тестирований, формирование планов развития, заявлений на отпуск, и отчетности по обучению. </p>
+				<p>И наконец, нам по силам даже возрождение забытого HR-портала и преобразование его в полноценный обучающий ресурс, благодаря всестороннему аудиту и полной переработке концепции системы дистанционного обучения.</p>
+				<a href="#" title="Подробнее"><img src="img/portfolio.png" alt="portfolio"></a>
+				<br><br><br><br>
+				<p>Для того, чтобы ознакомиться с нашими проектами подробнее, вы можете <a href="#">посмотреть</a> портфолио в формате PDF.</p>
 			</div>
 		</section>
 	</main>
