--- a/2.html
+++ b/2.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/favicon_.ico" type="image/png">
-	<title>Document</title>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
+	<title>SPECPOSTAVKA</title>
 	<link rel="stylesheet" href="libs/Font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick-theme.css">
@@ -18,15 +18,15 @@
 				<ul>
 					<li>
 						<i class="fa fa-map-marker" aria-hidden="true"></i>
-						<a href="#">Moskow, RU</a>
+						<a href="contacts.html">Moskow, RU</a>
 					</li>
 					<li>
 						<i class="fa fa-envelope" aria-hidden="true"></i>
-						<a href="#">test@mail.ru</a>
+						<a href="mailto:test@mail.ru">test@mail.ru</a>
 					</li>
 					<li>
 						<i class="fa fa-phone" aria-hidden="true"></i>
-						<a href="#">+7 (499) 240-05-93</a>
+						<a href="tel:+7 (499) 240-05-93">+7 (499) 240-05-93</a>
 					</li>
 				</ul>
 			</div>
@@ -139,13 +139,6 @@
 	</footer>
 	<!-- To top -->
 	<button class="to_top" id="js-to_top"><img src="img/icons/backtotop.png" alt="icon"></button>
-	<!-- Dialog -->
-	<noindex>
-		<script type='text/javascript'>
-			(function(){ var widget_id = 'AsHUTf3srA';var d=document;var w=window;function l(){
-			var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-		</script>
-	</noindex>
 
 	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
