--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/favicon_.ico" type="image/png">
-	<title>Document</title>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
+	<title>SPECPOSTAVKA</title>
 	<link rel="stylesheet" href="libs/Font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick-theme.css">
@@ -18,15 +18,15 @@
 				<ul>
 					<li>
 						<i class="fa fa-map-marker" aria-hidden="true"></i>
-						<a href="#">Moskow, RU</a>
+						<a href="contacts.html">Moskow, RU</a>
 					</li>
 					<li>
 						<i class="fa fa-envelope" aria-hidden="true"></i>
-						<a href="#">test@mail.ru</a>
+						<a href="mailto:test@mail.ru">test@mail.ru</a>
 					</li>
 					<li>
 						<i class="fa fa-phone" aria-hidden="true"></i>
-						<a href="#">+7 (499) 240-05-93</a>
+						<a href="tel:+7 (499) 240-05-93">+7 (499) 240-05-93</a>
 					</li>
 				</ul>
 			</div>
