--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
-	<title>SPECPOSTAVKA </title>
+	<title>SPECPOSTAVKA</title>
 	<link rel="stylesheet" href="libs/Font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick.css">
 	<link rel="stylesheet" href="libs/Slick-slider/slick-theme.css">
@@ -18,15 +18,15 @@
 				<ul>
 					<li>
 						<i class="fa fa-map-marker" aria-hidden="true"></i>
-						<a href="#">Moskow, RU</a>
+						<a href="contacts.html">Moskow, RU</a>
 					</li>
 					<li>
 						<i class="fa fa-envelope" aria-hidden="true"></i>
-						<a href="#">test@mail.ru</a>
+						<a href="mailto:test@mail.ru">test@mail.ru</a>
 					</li>
 					<li>
 						<i class="fa fa-phone" aria-hidden="true"></i>
-						<a href="#">+7 (499) 240-05-93</a>
+						<a href="tel:+7 (499) 240-05-93">+7 (499) 240-05-93</a>
 					</li>
 				</ul>
 			</div>
@@ -68,6 +68,7 @@
 						<div class="CENTERER">
 							<h1>АВТОМАТИЗАЦИЯ ПРОЦЕССА ОБУЧЕНИЯ</h1>
 							<p>Всесторонний аудит СДО, автоматизация и интеграция с другими системами компании.</p>
+							<a href="#">Подробнее</a>
 						</div>
 					</div>
 				</div>
@@ -76,6 +77,7 @@
 						<div class="CENTERER">
 							<h1>РАЗРАБОТКА ЭЛЕКТРОННЫХ КУРСОВ</h1>
 							<p>Разработка дистанционных курсов любого уровня сложности. Создание интерактивной учебной среды.</p>
+							<a href="#">Подробнее</a>
 						</div>
 					</div>
 				</div>
@@ -182,12 +184,12 @@
 	<!-- To top -->
 	<button class="to_top" id="js-to_top"><img src="img/icons/backtotop.png" alt="icon"></button>
 	<!-- Dialog -->
-	<noindex>
+<!-- 	<noindex>
 		<script type='text/javascript'>
 			(function(){ var widget_id = 'AsHUTf3srA';var d=document;var w=window;function l(){
 			var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
 		</script>
-	</noindex>
+	</noindex> -->
 
 	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
